--- a/zengarden/index.html
+++ b/zengarden/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>CSS Zen Garden: The Beauty of CSS Design</title>
+	<title>Bla bla bla...</title>
 
 	<link rel="stylesheet" media="screen" href="style_origin.css?v=8may2013">
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
@@ -53,7 +53,7 @@
 
 	<section class="intro" id="zen-intro">
 		<header role="banner">
-			<h1>CSS Zen Garden</h1>
+			<h1>Katholiek Onderwijs Vlaanderen</h1>
 			<h2>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</h2>
 		</header>
 
