--- a/zengarden/index.html
+++ b/zengarden/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Bla bla bla...  The GT touch</title>
+	<title>Bla bla bla...  The GT touch needs a weekend...</title>
 
 	<link rel="stylesheet" media="screen" href="style_origin.css?v=8may2013">
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
